Replace   new Integer(i) by   Integer.valueOf(i)
git-svn-id: https://jcae.svn.sourceforge.net/svnroot/jcae/trunk@1608 9c4724a3-da1e-0410-bc68-88f18da35cd4